# Dust-InventoryAgent

./: .gitignore  Cargo.toml  MsiTemplate.wxs  README.md  auditpage.html  build.rs  teste.js  use winapi{.txt
ApiRestfull/: configAD.js  dbinfos.js  main.js  package-lock.json  package.json
Server/: .env  main.js  package-lock.json  package.json  teste.js
Server/static/: auditoria.html  inventory.css  inventorypage.html  login.html
Website/: main.js  package-lock.json  package.json
Website/static/: inventory.css  inventorypage.html
src/: collect_data.rs  getinfo.rs  index.html  main.js  main.rs  make_requests.rs  mangodb_connect.rs  report_windows.slint  requests.rs  uicode.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: collect_data.rs  main.rs  make_requests.rs
src/ui/: uicode.rs
ui/: app.slint
